correcting <small> text and display for web version only

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="transaction">
             <h2 class="sr-only">Transações</h2>
 
-            <a href="#" onclick="Modal.toggle()" class="button new">+ Nova Transação</a>
+            <a href="#" onclick="Modal.toggle()" class="button new">+ Nova Transação</a><small>Aperte ESC para abrir/sair</small>
             <table id="data-table">
                 <thead>
                     <tr>
